project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-svc
spec:
  type: ClusterIP
  selector:
    app: httpserver
  ports: 
    - name: http
      protocol: TCP
      port: 2000
      targetPort: 3000
