project/manifests/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-srv
spec:
  type: NodePort
  selector:
    app: httpserver
  ports: 
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 3001
      targetPort: 3000
