project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-httpserver-ingress
spec: 
  rules:
  - host: todoapp.localtest.my 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpserver-svc
            port:
              number: 2000
